<resources>
    <string name="app_name">Movie Udacity</string>
    <string name="class_name_extra">class-name</string>

    <!-- api key res -->
    <string name="movie_api_key">d89d8544c746180e24453e6f99a145da</string>

    <!-- error res -->
    <string name="error_occurred">Please check your internet connection</string>

    <!-- menu res -->
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_trailer">Share trailer</string>

    <!-- movie detail res -->
    <string name="test_title">Blade Runner 2049</string>
    <string name="test_overview">Officer K (Ryan Gosling), a new blade runner for the Los Angeles Police Department,
        unearths a long-buried secret that has the potential to plunge what\'s left of society into chaos.</string>
    <string name="test_release_date">2017-10-04</string>
    <string name="test_vote_average">7.4</string>
    <string name="added_favorite">Movie added to Favorite</string>

    <!-- preference res -->
    <string name="preference_sort_list_title">Sort by</string>
    <string name="preference_sort_list_key">sort_by</string>
    <string name="preference_sort_list_default" translatable="false">popular</string>

    <!-- preference list entry res -->
    <string name="preference_sort_list_label_popular">Most popular</string>
    <string name="preference_sort_list_label_top_rated">Top rated</string>
    <string name="preference_sort_list_value_popular" translatable="false">popular</string>
    <string name="preference_sort_list_value_top_rated" translatable="false">top_rated</string>
    <string name="favorite">Favorites</string>
    <string name="removed_favorite">Favorite removed</string>
    <string name="review_title">Reviews:</string>
    <string name="overview_title">Overview:</string>

</resources>
