<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cardview_default_elevation"
        android:layout_margin="@dimen/card_side_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/favorite_poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/test_detail_poster_w92"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="6dp">

                <TextView
                    android:id="@+id/favorite_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    tools:text="@string/test_title" />

                <TextView
                    android:id="@+id/favorite_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/test_release_date"
                    style="@style/Base.TextAppearance.AppCompat.Caption" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="6dp">
                    
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star_yellow_24dp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/favorite_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/test_vote_average"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_gravity="center"/>
                    
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>